<RelativeLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    android:gravity="center"
    tools:context=".AllLayoutsActivity">

    <TextView
        android:id="@+id/headTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:text="@string/let_s_learn_about_layouts"
        android:textColor="@android:color/black"
        android:textSize="25sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/headTitle"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/constrain_layout"
        android:textColor="@android:color/holo_red_dark" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn1"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/xd_design"
        android:textColor="@color/teal_700" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn2"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/yellow"
        android:shadowRadius="20"
        android:text="@string/shared_preferences"
        android:textColor="@color/purple_700" />
<!--    <Button-->
<!--        android:id="@+id/btn4"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@+id/btn3"-->
<!--        android:layout_centerInParent="true"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:layout_margin="20dp"-->
<!--        android:backgroundTint="@color/yellow"-->
<!--        android:shadowRadius="20"-->
<!--        android:text="@string/collapsing_layout"-->
<!--        android:textColor="@color/purple_700" />-->


</RelativeLayout>