<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".RatingBarActivity">

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:stepSize="1"
        android:theme="@style/RatingBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@android:color/darker_gray"
        />

    <TextView
        android:id="@+id/status_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status_rating"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/firstText"
        app:layout_constraintStart_toStartOf="@+id/firstText"
        app:layout_constraintBottom_toTopOf="@+id/ratingBar"
        />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="😶"
        android:textSize="@dimen/_20sdp"
        android:textStyle="bold"
        android:textColor="@color/yellow"
        app:layout_constraintStart_toEndOf="@+id/status_rating"
        app:layout_constraintTop_toBottomOf="@+id/firstText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ratingBar"
        />

    <TextView
        android:id="@+id/firstText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/given_rating_is"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_10sdp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/ratingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        app:layout_constraintStart_toEndOf="@+id/firstText"
        android:textSize="@dimen/_20sdp"
        app:layout_constraintTop_toTopOf="@+id/firstText"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ratingBar"
        app:layout_constraintStart_toStartOf="@+id/ratingBar"
        app:layout_constraintEnd_toEndOf="@+id/ratingBar"
        android:layout_marginTop="@dimen/_50sdp"
        android:text="@string/submit"
        android:backgroundTint="@color/DarkSkyBlue"
        android:textAllCaps="false"
        />

    <ImageView
        android:id="@+id/thankImage"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_150sdp"
        app:layout_constraintTop_toBottomOf="@+id/btnSubmit"
        app:layout_constraintStart_toStartOf="@+id/btnSubmit"
        app:layout_constraintEnd_toEndOf="@+id/btnSubmit"
        android:layout_marginTop="@dimen/_10sdp"
        android:src="@drawable/thnk"
        android:visibility="invisible"

        />


</androidx.constraintlayout.widget.ConstraintLayout>